# nag-optimization-modelling-suite-ui

./: CMakeLists.txt  README.md
caseStudies/: CMakeLists.txt
caseStudies/kf_3d_zakharov/: kf_3d_zakharov.cpp  kf_zakharov.cpp
caseStudies/kf_easom/: kf_easom.cpp
caseStudies/kf_matyas/: kf_matyas.cpp
caseStudies/mt_1/: mt_1.cpp
caseStudies/mt_2/: mt_2.cpp
caseStudies/mt_3/: mt_3.cpp
caseStudies/st_rosenbrock_constr/: st_rosenbrock_constr.cpp
caseStudies/st_rosenbrock_disk/: st_rosenbrock_disk.cpp
caseStudies/st_zakharov_star/: st_zakharov_star.cpp
cmake/: FindNAG_Library.cmake  FindNAG_dco_cpp.cmake
doc/: todo.txt  user guide.txt
doc/Latex_talk/: slides.aux  slides.nav  slides.tex
doc/Report/: literature.bib  report.aux  report.bbl  report.out  report.tex  report.toc
doc/talk/: slides.out  slides.toc
examples/: CMakeLists.txt
examples/dco_gradient/: dco_gradient.cpp  main.cpp
examples/dco_hessian/: dco_hessian.cpp  main.cpp
examples/dco_lincheck/: dco_lincheck.cpp  main.cpp
examples/e04kf/: e04kf.cpp  simple_interface_prototype_kf.cpp
examples/e04mt/: e04mt.cpp  simple_interface_prototype_mt.cpp
examples/e04st/: e04st.cpp  simple_interface_prototype_st.cpp
include/: derivative.hpp  monitor.hpp  nag_cpp.hpp  problem.hpp  solver.hpp
license/: nag.key
tests/: CMakeLists.txt
tests/test_dco/: test_dco.cpp
tests/test_linearity/: test_linearity.cpp
tests/test_set_get/: test_set_get.cpp
